--- a/index.html
+++ b/index.html
@@ -80,48 +80,11 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .mywork-status strong {font-family: var(--font-title);color: var(--mywork-color);font-weight: normal;}
 footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
 /* SOCIAL ICONS */
-.social-icon-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 16px; /* jarak antar tombol */
-  margin-top: 20px;
-  flex-wrap: wrap; /* responsif jika terlalu banyak tombol */
-}
-
-.social-icon-list a {
-  display: flex;
-  justify-content: flex-end; /* geser ikon ke kanan */
-  align-items: center;
-  width: 60px;      /* ukuran tombol */
-  height: 60px;     /* ukuran tombol */
-  border-radius: 12px;
-  background: rgba(15,23,42,0.95);
-  transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
-  cursor: pointer;
-  padding-right: 8px; /* jarak ikon ke kanan */
-  box-sizing: border-box;
-}
-
-.social-icon-list a img {
-  width: 40px;   /* ukuran ikon kotak */
-  height: 40px;  /* ukuran ikon kotak */
-  object-fit: cover; /* isi ikon kotak */
-  border-radius: 0; /* kotak */
-  display: block;
-  margin: 0; /* pastikan di tengah secara vertikal */
-}
-
-.social-icon-list a:hover {
-  transform: scale(1.1);
-  box-shadow: 0 4px 12px rgba(56,189,248,0.3);
-  background: rgba(56, 189, 248, 0.2);
-}
-
-.social-icon-list a:hover img {
-  transform: scale(0.95);
-}
-
+.social-icon-list {display: flex;justify-content: center;align-items: center;gap: 16px;margin-top: 20px;flex-wrap: wrap;}
+.social-icon-list a {display: flex;justify-content: flex-end;align-items: center;width: 60px;height: 60px;border-radius: 12px;background: rgba(15,23,42,0.95);transition: transform 0.3s, box-shadow 0.3s, background 0.3s;cursor: pointer;padding-right: 8px;box-sizing: border-box;}
+.social-icon-list a img {width: 60px;height: 60px;object-fit: cover;border-radius: 0;display: block;margin: 0;}
+.social-icon-list a:hover {transform: scale(1.1);box-shadow: 0 4px 12px rgba(56,189,248,0.3);background: rgba(56, 189, 248, 0.2);}
+.social-icon-list a:hover img {transform: scale(0.95)}
 #socialBox .bio-description a img {width: 24px;height: 24px;margin-right: 10px;vertical-align: middle;}
 </style>
 </head>
