--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Foruxy</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 <style>
 :root{
   --background-image:url("https://cdn.discordapp.com/attachments/1382212470801694770/1454463795316392057/Muffet.gif?ex=69512e77&is=694fdcf7&hm=1ecddbdcfa0ddfe3f7a0bfefb8e9254f76752014545c396a40263d07c6d1404b&");
