--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .mywork-name strong,
 .mywork-owner strong,
 .mywork-date strong,
-.mywork-status strong {font-family: var(--font-title);color: var(--mywork-color);font-weight: normal;}
+.mywork-status strong {font-family: var(--font-body);color: var(--mywork-color);font-weight: normal;}
 footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
 /* SOCIAL ICONS */
 .social-icon-list {display: flex;justify-content: center;align-items: center;gap: 16px;margin-top: 20px;flex-wrap: wrap;}
