--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Jersey+25&family=Share+Tech+Mono&display=swap" rel="stylesheet">
 <style>
 :root{
-  --background-image:url("https://cdn.discordapp.com/attachments/1382212470801694770/1454463795316392057/Muffet.gif?ex=69512e77&is=694fdcf7&hm=1ecddbdcfa0ddfe3f7a0bfefb8e9254f76752014545c396a40263d07c6d1404b&");
-  --avatar-image-background:url("https://cdn.discordapp.com/attachments/799015739973566545/1453160116823003177/image.png");
+  --background-image:url("https://raw.githubusercontent.com/Foruxy/Foruxy.github.io/e94d17015d3fb275675a0e0240ad121a667c92cc/Muffet.gif");
+  --avatar-image-background:url("https://raw.githubusercontent.com/Foruxy/Foruxy.github.io/e94d17015d3fb275675a0e0240ad121a667c92cc/avatar.png");
   --accent:#38bdf8;
   --font-body: "Share Tech Mono", monospace;
   --font-title: "Jersey 25", cursive;
@@ -144,8 +144,8 @@ footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
 const CONFIG = {
   name:"Foruxy Puppetaru",
   tagline:"Your Partner for VTuber Servers, Moderation, and Management",
-  avatar:"https://cdn.discordapp.com/attachments/1382212470801694770/1454462899358662707/image.png?ex=6951d661&is=695084e1&hm=dc6c7c02e78cc22283fc0fd8a1a3f32a815a9861dd4c8b28aa32dd73e455defe&",
-  aboutAvatar:"https://cdn.discordapp.com/attachments/1382212470801694770/1454462899786485780/image.png?ex=6951d661&is=695084e1&hm=4cf8051c2dedcec17924489b8ca48d7f5b8d60b0fa96d535501105645aaf6a5e&",
+  avatar:"https://raw.githubusercontent.com/Foruxy/Foruxy.github.io/e94d17015d3fb275675a0e0240ad121a667c92cc/avatar.png",
+  aboutAvatar:"https://raw.githubusercontent.com/Foruxy/Foruxy.github.io/e94d17015d3fb275675a0e0240ad121a667c92cc/avatar2.png",
   aboutName:"Foruxy Puppetaru",
   aboutRace:"Silver Catfox",
   aboutBio:"Hawrru~! I'm Foruxy, the Silver Catfox!\nI create Discord servers for VTubers, manage VTuber communities, and moderate YouTube channels.\nI also support as a VTuber Advisor, Counselor, and Helper.\nSince February 2025, I’ve been dedicated to helping VTubers grow their communities with creativity and care.",
