--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Jersey+25&family=Share+Tech+Mono&display=swap" rel="stylesheet">
 <style>
 :root{
-  --background-image:url("https://raw.githubusercontent.com/Foruxy/Foruxy.github.io/e94d17015d3fb275675a0e0240ad121a667c92cc/Muffet.gif");
-  --avatar-image-background:url("https://raw.githubusercontent.com/Foruxy/Foruxy.github.io/e94d17015d3fb275675a0e0240ad121a667c92cc/avatar.png");
+  --background-image:url("https://github.com/Foruxy/Foruxy.github.io/blob/main/assets/images/Muffet.gif?raw=true");
+  --avatar-image-background:url("https://github.com/Foruxy/Foruxy.github.io/blob/main/assets/images/avatar.png?raw=true");
   --accent:#38bdf8;
   --font-body: "Share Tech Mono", monospace;
   --font-title: "Jersey 25", cursive;
@@ -144,8 +144,8 @@ footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
 const CONFIG = {
   name:"Foruxy Puppetaru",
   tagline:"Your Partner for VTuber Servers, Moderation, and Management",
-  avatar:"https://raw.githubusercontent.com/Foruxy/Foruxy.github.io/e94d17015d3fb275675a0e0240ad121a667c92cc/avatar.png",
-  aboutAvatar:"https://raw.githubusercontent.com/Foruxy/Foruxy.github.io/e94d17015d3fb275675a0e0240ad121a667c92cc/avatar2.png",
+  avatar:"https://github.com/Foruxy/Foruxy.github.io/blob/main/assets/images/avatar.png?raw=true",
+  aboutAvatar:"https://github.com/Foruxy/Foruxy.github.io/blob/main/assets/images/avatar2.png?raw=true",
   aboutName:"Foruxy Puppetaru",
   aboutRace:"Silver Catfox",
   aboutBio:"Hawrru~! I'm Foruxy, the Silver Catfox!\nI create Discord servers for VTubers, manage VTuber communities, and moderate YouTube channels.\nI also support as a VTuber Advisor, Counselor, and Helper.\nSince February 2025, I’ve been dedicated to helping VTubers grow their communities with creativity and care.",
