--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   --main-background-color:#262525;
   --loading-bar-color:#38bdf8;
   --loading-bar-border:#38bdf8;
-  --loading-background-color:#282736;
+  --loading-background-color:#1f1f24;
   --loading-text-color:#38bdf8;
   --avatar-outline-color:#090933;
   --avatar-outline-width:4px;
