--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
   --mywork-color: #4b38f8;
 }
 /* GLOBAL FONT */
-*, body, .container, .paper-box {
-    box-sizing: border-box;
-    font-family: var(--font-body); /* ganti dari --font-main */
-    cursor: none !important;
-    margin: 0;
-    padding: 0;
-}
+*, body, .container, .paper-box {box-sizing: border-box;font-family: var(--font-body);cursor: none !important;margin: 0;padding: 0;}
 body{min-height:100vh;background:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),var(--background-image);background-size:cover;background-position:center;display:flex;justify-content:center;align-items:center;color:#e5e7eb;overflow:hidden;}
 #loadingScreen{position:fixed;top:0;left:0;width:100%;height:100%;background:var(--loading-background-color);display:flex;flex-direction:column;justify-content:center;align-items:center;color:var(--loading-text-color);font-size:1.6rem;z-index:99999;transition:opacity .5s;}
 #loadingScreen .bar-container{width: 50%;max-width: 260px;height: 8px;border: 2px solid var(--accent);border-radius: 6px;margin-top: 16px;overflow: hidden;}
@@ -67,17 +61,17 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .mywork-image{width:100px;height:100px;object-fit:cover;border-radius:12px;border:var(--mywork-image-outline-width) solid var(--mywork-image-outline-color);flex-shrink:0;}.mywork-desc{display:flex;flex-direction:column;gap:6px;color:#e5e7eb;}
 .mywork-name,.mywork-owner,.mywork-date,.mywork-status {font-size: 1rem;}
 .mywork-name strong,.mywork-owner strong,.mywork-date strong,.mywork-status strong{color:var(--accent)font-size:0.8rem;}
-.about-box-content{display:flex;gap:20px;align-items:flex-start;}
+.about-box-content{display:flex;gap:14px;align-items:flex-start;}
 .about-box-content .about-avatar{width:120px;height:120px;border-radius:12px;border:var(--about-avatar-outline-width) solid var(--about-avatar-outline-color);background-size:cover;background-position:center;flex-shrink:0;}
 .about-box-content .about-text{flex:1;color:#e5e7eb;}
 .about-box-content .about-text div{margin-bottom:8px;}
 .bio-description{font-size:.9rem;line-height:1.4;color:#e5e7eb;margin-top:12px;text-align:left;}
 .bio-description .about-bio p {font-size:.8rem;}
 .about-name::before,.about-race::before,.about-bio::before{font-family: var(--font-title);font-weight: normal;}
-.about-text {display: flex;flex-direction: column;gap: 12px;}
-.about-row {display: grid;grid-template-columns: 80px 1fr;gap: 12px;align-items: flex-start;}
-.about-title {font-family: var(--font-title);color: var(--accent);font-size: 1.2rem;text-align: right;padding-top: 2px;}
-.about-value {font-size: 0.85rem;line-height: 1.5;color: #e5e7eb;text-align: left;}
+.about-text {display: flex;flex-direction: column;gap: 6px;}
+.about-row {display: grid;grid-template-columns: 80px 1fr;gap: 8px;align-items: flex-start;}
+.about-title {font-family: var(--font-title);color: var(--accent);font-size: 1.05rem;text-align: right;padding-top: 2px;}
+.about-value {font-size: 0.8rem;line-height: 1.4;color: #e5e7eb;text-align: left;}
 .bio-row .about-value {white-space: pre-line;}
 @keyframes slowBlink {0%{opacity:1;}50%{opacity:.4;}100%{opacity:1;}}
 .container h1{font-family: var(--font-title);font-weight: normal;}
