--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body{min-height:100vh;background:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)
 .avatar{width:100%;height:100%;border-radius:50%;border:var(--avatar-outline-width) solid #fff;background-image:var(--avatar-image-background);background-size:cover;background-position:center;}
 h1{margin:0;font-size:1.7rem;font-weight:600;}p{margin:8px 0 26px;font-size:.95rem;color:#94a3b8;}
 .link{display:block;padding:18px;margin-bottom:16px;border-radius:18px;background:rgba(15,23,42,.95);color:#e5e7eb;text-decoration:none;border:1px solid rgba(255,255,255,.08);transform:translateY(0) scale(1);transition:transform .3s,box-shadow .3s;position:relative;cursor:pointer;}
-.link.hover{transform:translateY(-3px) scale(1.02);box-shadow:0 15px 40px rgba(56,189,248,.35);}
+.link.hover{transform: scale(1.02);box-shadow: 0 0 25px rgba(56,189,248,.45),0 0 50px rgba(56,189,248,.25);}
 .link span{display:inline-block;font-weight:500;transition:transform .3s;}
 .link.zoom-text span{transform:scale(1.2);}
 footer{margin-top:18px;font-size:.75rem;color:#64748b;}
