--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .mywork-name strong,
 .mywork-owner strong,
 .mywork-date strong,
-.mywork-status strong {font-family: var(--font-body);color: var(--mywork-color);font-weight: normal;}
+.mywork-status strong {font-family: var(--font-title);color: var(--mywork-color);font-weight: normal;}
 footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
 .social-icon-list {display: flex;justify-content: center;align-items: center;gap: 16px;margin-top: 20px;flex-wrap: wrap;}
 .social-icon-list a {display: flex;justify-content: flex-end;align-items: center;width: 60px;height: 60px;border-radius: 12px;background: rgba(15,23,42,0.95);transition: transform 0.3s, box-shadow 0.3s, background 0.3s;cursor: pointer;padding-right: 8px;box-sizing: border-box;}
