--- a/index.html
+++ b/index.html
@@ -67,30 +67,28 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .mywork-image{width:100px;height:100px;object-fit:cover;border-radius:12px;border:var(--mywork-image-outline-width) solid var(--mywork-image-outline-color);flex-shrink:0;}.mywork-desc{display:flex;flex-direction:column;gap:1px;color:#e5e7eb;}
 .mywork-name,.mywork-owner,.mywork-date,.mywork-status {font-size: 1rem;}
 .mywork-name strong,.mywork-owner strong,.mywork-date strong,.mywork-status strong{color:var(--accent)font-size:0.8rem;}
+.mywork-name strong,.mywork-owner strong,.mywork-date strong,
+.mywork-status strong {font-family: var(--font-title);color: var(--mywork-color);font-weight: normal;}
 .about-box-content{display:flex;gap:20px;align-items:flex-start;}
 .about-box-content .about-avatar{width:120px;height:120px;border-radius:12px;border:var(--about-avatar-outline-width) solid var(--about-avatar-outline-color);background-size:cover;background-position:center;flex-shrink:0;}
 .about-box-content .about-text{flex:1;color:#e5e7eb;}
 .about-box-content .about-text div{margin-bottom:8px;}
 .about-text > div {display: grid;grid-template-columns: 60px auto;gap: 0.4px;align-items: start;}
+.about-name::before,.about-race::before,.about-bio::before{font-family: var(--font-title);font-weight: normal;}
+.about-name::before{content: "Nama: ";}.about-race::before{content: "Race: ";}.about-bio::before{content:"Bio: ";}
 .bio-description{font-size:.9rem;line-height:1.4;color:#e5e7eb;margin-top:12px;text-align:left;}
 .bio-description .about-bio p {font-size:.8rem;}
 @keyframes slowBlink {0%{opacity:1;}50%{opacity:.4;}100%{opacity:1;}}
 .container h1{font-family: var(--font-title);font-weight: normal;}
 #links .link span{font-family: var(--font-title);font-weight: normal;font-size: 1.05rem;}
 .paper-box h1{font-family: var(--font-title);font-weight: normal;}
-.about-name::before,.about-race::before,.about-bio::before{font-family: var(--font-title);font-weight: normal;}
-.about-name::before{content: "Nama: ";}.about-race::before{content: "Race: ";}.about-bio::before{content:"Bio: ";}
-.mywork-name strong,
-.mywork-owner strong,
-.mywork-date strong,
-.mywork-status strong {font-family: var(--font-title);color: var(--mywork-color);font-weight: normal;}
-footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
 .social-icon-list {display: flex;justify-content: center;align-items: center;gap: 16px;margin-top: 20px;flex-wrap: wrap;}
 .social-icon-list a {display: flex;justify-content: flex-end;align-items: center;width: 60px;height: 60px;border-radius: 12px;background: rgba(15,23,42,0.95);transition: transform 0.3s, box-shadow 0.3s, background 0.3s;cursor: pointer;padding-right: 8px;box-sizing: border-box;}
 .social-icon-list a img {width: 60px;height: 60px;object-fit: cover;border-radius: 0;display: block;margin: 0;}
 .social-icon-list a:hover {transform: scale(1.1);box-shadow: 0 4px 12px rgba(56,189,248,0.3);background: rgba(56, 189, 248, 0.2);}
 .social-icon-list a:hover img {transform: scale(0.95)}
 #socialBox .bio-description a img {width: 24px;height: 24px;margin-right: 10px;vertical-align: middle;}
+footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
 </style>
 </head>
 <body>
