--- a/index.html
+++ b/index.html
@@ -44,8 +44,24 @@ body{min-height:100vh;background:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)
 .cursor.magnify{width:48px;height:48px;background:rgba(255,255,255,.15);backdrop-filter:blur(6px);}
 .container{width:100%;max-width:500px;padding:30px;text-align:center;background:rgba(2,6,23,.85);backdrop-filter:blur(16px);border-radius:20px;border:1px solid rgba(255,255,255,.08);box-shadow:0 30px 70px rgba(0,0,0,.8);position:relative;z-index:1;transform:translateY(100px);opacity:0;transition:transform .8s cubic-bezier(.25,1,.5,1),opacity .8s;}
 .container.show{transform:translateY(0);opacity:1;}
-.avatar-wrapper{width:100px;height:100px;margin:0 auto 18px;border-radius:50%;padding:var(--avatar-outline-width);background:conic-gradient(var(--avatar-outline-color), #0ea5e9, var(--avatar-outline-color));}
-.avatar{width:100%;height:100%;border-radius:50%;border:var(--avatar-outline-width) solid #fff;background-image:var(--avatar-image-background);background-size:cover;background-position:center;}
+.avatar-wrapper {
+  width:150px;
+  height:150px;
+  margin:0 auto 18px;
+  border-radius:50%;
+  padding:var(--avatar-outline-width);
+  background:conic-gradient(var(--avatar-outline-color), #0ea5e9, var(--avatar-outline-color));
+}
+
+.avatar {
+  width:100%;
+  height:100%;
+  border-radius:50%;
+  border:var(--avatar-outline-width) solid #fff;
+  background-image:var(--avatar-image-background);
+  background-size:cover;
+  background-position:center;
+}
 h1{margin:0;font-size:1.7rem;font-weight:600;}p{margin:8px 0 26px;font-size:.95rem;color:#94a3b8;}
 .link{display:block;padding:18px;margin-bottom:16px;border-radius:18px;background:rgba(15,23,42,.95);color:#e5e7eb;text-decoration:none;border:1px solid rgba(255,255,255,.08);transform:translateY(0) scale(1);transition:transform .3s,box-shadow .3s;position:relative;cursor:pointer;}
 .link.hover{transform: scale(1.02);box-shadow: 0 0 25px rgba(56,189,248,.45),0 0 50px rgba(56,189,248,.25);}
