--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ const CONFIG = {
     {image:"https://cdn.discordapp.com/icons/1405524507330084936/a48a0254bb1646c05e2bf2f782a4eb5f.png",name:"[𝓚.𝓐.𝓒] 𝓚𝓪𝓲 𝓐𝔃𝓾𝓶𝓪 𝓒𝓸𝓶𝓶𝓾𝓷𝓲𝓽𝔂",owner:"Kaikaje",date:"14 Agustus 2025",status:"Finish"},
     {image:"https://cdn.discordapp.com/icons/792733470958551040/ffd45bb32ecb865a6851ebcfa8c39eaa.png",name:"Fowl Base",owner:"Foruxy Puppetaru",date:"02 Februari 2025",status:"Finish"}
   ],
-  social = [
+  social: [
     {icon:"https://cdn-icons-png.flaticon.com/512/124/124010.png",url:"https://twitter.com/"},
     {icon:"https://cdn-icons-png.flaticon.com/512/2111/2111370.png",url:"https://discord.com/"},
     {icon:"https://cdn-icons-png.flaticon.com/512/2111/2111463.png",url:"https://youtube.com/"},
