--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 :root{--background-image:url("https://github.com/Foruxy/Foruxy.github.io/blob/main/assets/images/Muffet.gif?raw=true");--avatar-image-background:url("https://github.com/Foruxy/Foruxy.github.io/blob/main/assets/images/avatar.png?raw=true");--accent:#38bdf8;--font-body:"Share Tech Mono",monospace;--font-title:"Jersey 25",cursive;--main-background-color:#262525;--loading-bar-color:#38bdf8;--loading-bar-border:#38bdf8;--loading-background-color:#282736;--loading-text-color:#38bdf8;--avatar-outline-color:#090933;--avatar-outline-width:4px;--about-avatar-outline-color:#f87171;--about-avatar-outline-width:3px;--mywork-image-outline-color:#f1f0f5;--mywork-image-outline-width:2px;--mywork-border-color:#8a898c;--mywork-box-outline-width:2px;--mywork-color:#4b38f8;}
 *,body,.container,.paper-box{box-sizing:border-box;font-family:var(--font-body);cursor:none !important;margin:0;padding:0;}
 body{min-height:100vh;background:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),var(--background-image);background-size:cover;background-position:center;display:flex;justify-content:center;align-items:center;color:#e5e7eb;overflow:hidden;}
-#loadingScreen{position:fixed;top:0;left:0;width:100%;height:100%;background:var(--loading-background-color);display:flex;flex-direction:column;justify-content:center;align-items:center;color:var(--loading-text-color);font-size:1.6rem;z-index:99999;transition:opacity .5s;}
-#loadingScreen .bar-container{width:50%;max-width:260px;height:8px;border:2px solid var(--accent);border-radius:6px;margin-top:16px;overflow:hidden;}
-#loadingScreen .bar{width:0;height:100%;background:var(--accent);transition:width .1s linear;}
+#loadingScreen{... display:flex; ... opacity:1; transition:opacity .5s;}
+#loadingScreen .bar-container{... overflow:hidden;}
+#loadingScreen .bar{width:0%; height:100%; background:var(--accent); transition:width .1s linear;}
 .loading-text{animation:slowBlink 2.8s ease-in-out infinite;}
 .cursor{position:fixed;width:14px;height:14px;border-radius:50%;background:rgba(255,255,255,.9);mix-blend-mode:difference;pointer-events:none;z-index:9999;transform:translate(-50%,-50%);transition:width .2s,height .2s,background .2s,border .2s;}
 .cursor.magnify{width:48px;height:48px;background:rgba(255,255,255,.15);backdrop-filter:blur(6px);}
@@ -93,7 +93,7 @@ const CONFIG={name:"Foruxy Puppetaru",tagline:"Your Partner for VTuber Servers, 
                 {name:"Discord",url:"https://discord.com/users/797770498745303092",svg:`<img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord"/>`}]
 };
 <script>
-document.addEventListener("DOMContentLoaded",()=>{
+document.addEventListener("DOMContentLoaded", () => { ... });
 
 // Avatar & teks
 document.querySelector(".container .avatar").style.backgroundImage=`url(${CONFIG.avatar})`;
