--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ const CONFIG = {
   aboutName:"Foruxy Puppetaru",
   aboutRace:"Silver Catfox",
   aboutBio:"Hawrru~! I'm Foruxy, the Silver Catfox!\nI create Discord servers for VTubers, manage VTuber communities, and moderate YouTube channels.\nI also support as a VTuber Advisor, Counselor, and Helper.\nSince February 2025, I’ve been dedicated to helping VTubers grow their communities with creativity and care.",
-  links:[{label:"✉ About Me",url:"#about"},{label:"💼 My Work",url:"#work"},{label:"🌐 Social",url:"#social"}],
+  links:[{label:"👤 About Me",url:"#about"},{label:"💼 My Work",url:"#work"},{label:"🌐 Social",url:"#social"}],
   myWork:[
     {image:"https://cdn.discordapp.com/icons/1391655093920727040/aff24dcc07ba0d7913693c536696ee31.png",name:"Yasei Pyon’s Zoological Society",owner:"Yasei Pyon",date:"07 July 2025",status:"Partner"},
     {image:"https://cdn.discordapp.com/icons/1431225172614054000/e19f0c8cbf37b33ccab1ca9b58a7f0b9.png",name:"Hidden Peak ❄",owner:"Eseuri Krasu",date:"24 October 2025",status:"Partner"},
