--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
   <h1 id="name"></h1>
   <p id="tagline"></p>
   <div id="links"></div>
-  <footer>© 2025 <span id="footer-name"></span></footer>
+  <footer>© 2025 <span id="footer-name"><span All rights reserved.></span></footer>
 </div>
 
 <!-- OVERLAY BOXES -->
