--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ const CONFIG = {
   name:"Foruxy Puppetaru",
   tagline:"An introverted cat-fox from a virtual world",
   avatar:"https://github.com/Foruxy/Foruxy.github.io/blob/main/assets/images/avatar.png?raw=true",
-  aboutAvatar:"https://github.com/Foruxy/Foruxy.github.io/blob/bbedc2dfade78fa1ab9ddbb86903f12625b6d87b/assets/images/Avatar2.png",
+  aboutAvatar:"https://github.com/Foruxy/Foruxy.github.io/blob/main/assets/images/Avatar2.png?raw=true",
   aboutName:"Foruxy Puppetaru",
   aboutRace:"Silver Catfox",
   aboutBio:"Hawrru~! I'm Foruxy, the Silver Catfox!\nI create Discord servers for VTubers, manage VTuber communities, and moderate YouTube channels.\nI also support as a VTuber Advisor, Counselor, and Helper.\nSince February 2025, I’ve been dedicated to helping VTubers grow their communities with creativity and care.",
