--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .mywork-name strong,.mywork-owner strong,.mywork-date strong,
 .mywork-status strong {font-family: var(--font-title);color: var(--mywork-color);font-weight: normal;}
 .about-box-content{display:flex;gap:20px;align-items:flex-start;}
-.about-box-content .about-avatar{width:120px;height:120px;border-radius:12px;border:var(--about-avatar-outline-width) solid var(--about-avatar-outline-color);background-size:cover;background-position:center;flex-shrink:0;}
+.about-box-content .about-avatar{width:150px;height:150px;border-radius:12px;border:var(--about-avatar-outline-width) solid var(--about-avatar-outline-color);background-size:cover;background-position:center;flex-shrink:0;}
 .about-box-content .about-text{flex:1;color:#e5e7eb;}
 .about-box-content .about-text div{margin-bottom:4px;}
 .about-text > div {display: grid;grid-template-columns: 50px auto;gap: 4px;align-items: start;}
 .about-name::before,.about-race::before,.about-bio::before{font-family: var(--font-title);font-weight: normal;font-size: 1.2rem;}
-.about-name::before{content: "Nama: ";}.about-race::before{content: "Race: ";}.about-bio::before{content:"Bio: ";}
+.about-name::before{content: "Name: ";}.about-race::before{content: "Race: ";}.about-bio::before{content:"Bio: ";}
 .bio-description{font-size:.9rem;line-height:1.4;color:#e5e7eb;margin-top:4px;text-align:left;}
 .bio-description .about-bio p {font-size:.8rem;}
 @keyframes slowBlink {0%{opacity:1;}50%{opacity:.4;}100%{opacity:1;}}
